wrapped div with a section tag

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="light_container">
-      <img
-        class="light_bulb"
-        src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-        alt="lightbulb"
-      />
-    </div>
+    <section>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
