--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
           src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
           alt="lightbulb"
         />
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
       </div>
     </section>
 
