dup image x3 correctly

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
           src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
           alt="lightbulb"
         />
+      </div>
+      <div class="light_container">
         <img
           class="light_bulb"
           src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
           alt="lightbulb"
         />
+      </div>
+      <div class="light_container">
         <img
           class="light_bulb"
           src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
