--- a/index.html
+++ b/index.html
@@ -8,76 +8,77 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-    </section>
-    <section>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-    </section>
-    <section>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-      <div class="light_container">
-        <img
-          class="light_bulb"
-          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-          alt="lightbulb"
-        />
-      </div>
-    </section>
-
+    <main>
+      <section>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+      </section>
+      <section>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+      </section>
+      <section>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+        <div class="light_container">
+          <img
+            class="light_bulb"
+            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+            alt="lightbulb"
+          />
+        </div>
+      </section>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
