added background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <main
+      style="
+        background-image: url('https://t4.ftcdn.net/jpg/02/65/86/05/360_F_265860510_OVJuWgOJ7xQCNF8rLjCy51x2hdKGVTQk.jpg');
+        background-repeat: no-repeat;
+      "
+    >
       <section>
         <div class="light_container">
           <img
