centered background image

--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <title>Memory Lights</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <main
-      style="
-        background-image: url('https://t4.ftcdn.net/jpg/02/65/86/05/360_F_265860510_OVJuWgOJ7xQCNF8rLjCy51x2hdKGVTQk.jpg');
-        background-repeat: no-repeat;
-      "
-    >
+  <body class="background">
+    <main class="background_image">
       <section>
         <div class="light_container">
           <img
