grid with background

--- a/index.html
+++ b/index.html
@@ -7,73 +7,71 @@
     <title>Memory Lights</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="background">
-    <main class="background_image">
-      <section>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-        <div class="light_container">
-          <img
-            class="light_bulb"
-            src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
-            alt="lightbulb"
-          />
-        </div>
-      </section>
+  <body class="background background_image">
+    <main>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
+      <div class="light_container">
+        <img
+          class="light_bulb"
+          src="https://c8.alamy.com/comp/2B16B32/light-bulb-symbol-electricity-innovation-idea-vector-2B16B32.jpg"
+          alt="lightbulb"
+        />
+      </div>
     </main>
     <script src="index.js"></script>
   </body>
